# shape-up

./: .gitignore  README.md  insomnia_collection.json
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: main.py
backend/src/application/: __init__.py
backend/src/application/services/: calories.py
backend/src/application/use_cases/: base_use_case.py
backend/src/application/use_cases/auth/: authenticate_user_use_case.py  get_current_user_use_case.py
backend/src/application/use_cases/calories/: calculate_bmr_use_case.py  calculate_calorie_goal_use_case.py  calculate_tdee_use_case.py
backend/src/application/use_cases/diet/: add_food_to_diet_use_case.py  add_food_to_meal_use_case.py  create_diet_use_case.py  create_meal_plan_use_case.py  delete_diet_use_case.py  get_diet_foods_use_case.py  get_diet_use_case.py  get_diets_by_user_use_case.py  get_meal_foods_use_case.py  get_meal_plans_use_case.py  remove_food_from_diet_use_case.py  update_diet_use_case.py
backend/src/application/use_cases/exercise/: create_exercise_use_case.py  delete_exercise_use_case.py  get_exercise_use_case.py  list_exercises_use_case.py  update_exercise_use_case.py
backend/src/application/use_cases/food/: create_food_use_case.py  delete_food_use_case.py  get_food_by_name_use_case.py  get_food_use_case.py  get_foods_by_category_use_case.py  get_foods_use_case.py  list_foods_use_case.py  search_foods_use_case.py  update_food_use_case.py
backend/src/application/use_cases/meal_plan/: create_meal_plan_use_case.py  delete_meal_plan_use_case.py  get_meal_plan_use_case.py  list_meal_plans_use_case.py  update_meal_plan_use_case.py
backend/src/domain/: __init__.py  models.py  schemas.py
backend/src/domain/exceptions/: __init__.py  client.py  server.py
backend/src/infrastructure/: __init__.py  auth.py  config.py
backend/src/infrastructure/database/: base.py  manager.py
backend/src/infrastructure/repositories/: base_repository.py  diet_repository.py  exercise_repository.py  food_repository.py  progress_repository.py  user_repository.py  workout_plan_repository.py  workout_session_repository.py
backend/src/presentation/: __init__.py
backend/src/presentation/api/: exception_handlers.py  main.py
backend/src/presentation/api/v1/: api.py
(+45 files in other folders)
